--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.25.2",
     "axios": "^0.19.0",
+    "dotenv": "^8.2.0",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-autosuggest": "^9.4.3",
@@ -11,12 +13,15 @@
     "react-dom": "^16.12.0",
     "react-headroom": "^3.0.0",
     "react-helmet": "^5.2.1",
+    "react-map-gl": "^5.1.2",
     "react-modal": "^3.11.1",
+    "react-rotating-text": "^1.4.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-select": "^3.0.8",
     "react-spring": "^8.0.27",
     "react-tabs": "^3.0.0",
+    "reaviz": "^7.2.0",
     "tippy.js": "^5.1.1"
   },
   "scripts": {
